<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homepageTextView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/teal_200"
        />
    <ListView
        android:id="@+id/homepageListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homepageTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>